commit [Streams] 1.8 peek mapping